<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow android:weightSum="2">

            <TextView
                android:layout_weight="1"
                android:text="@string/username" />

            <EditText
                android:id="@+id/edit_text_username"
                android:layout_weight="1"
                android:hint="@string/username_hint"
                android:inputType="text" />
        </TableRow>

        <TableRow android:weightSum="2">

            <TextView
                android:layout_weight="1"
                android:text="@string/password" />

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_weight="1"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

        </TableRow>

    </TableLayout>

    <CheckBox
        android:id="@+id/checkbox_remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:checked="false"
        android:text="@string/remember_me" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

</LinearLayout>